BE/error/src/main/java/com/example/demo/schedule/persistence/ScheduleRepository.java
package com.example.demo.schedule.persistence;

import org.springframework.data.jpa.repository.JpaRepository;

public interface ScheduleRepository extends JpaRepository<ScheduleEntity, Long> {
}
